# EuclideOpenGL

./: .gitignore  CMakeLists.txt  EuclideOpenGL.sln  EuclideOpenGL.vcxproj  EuclideOpenGL.vcxproj.filters  LICENSE.md  README.md  TODO.md  TODO.txt  imgui.ini
src/: App.cpp  App.h  main.cpp
src/Engine/: EuclideCamera.cpp  EuclideCamera.h  EuclideEngine.cpp  EuclideEngine.h  EuclideInterface.cpp  EuclideInterface.h  EuclideModel.cpp  EuclideModel.h  EuclideRenderer.cpp  EuclideRenderer.h  EuclideWindow.cpp  EuclideWindow.h  Geometry.cpp  Geometry.h  NodeScene.h  Utils.cpp  Utils.h
src/Engine/Core/: Geometry.cpp  Utils.h
src/Engine/Core/CustomImGui/: FileDialog.cpp  FileDialog.h  ImGuiUtils.h
src/Engine/Core/Geometry/: Geometry.cpp  Geometry.h
src/Engine/Core/Nodes/: BoundingBox.cpp  BoundingBox.h  Circle.cpp  Circle.h  CopyToPoints.cpp  CopyToPoints.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Duplicate.cpp  Duplicate.h  FanTriangulate.cpp  FanTriangulate.h  Grid.cpp  Grid.h  HardenNormals.cpp  HardenNormals.h  ImportObj.cpp  ImportObj.h  Line.cpp  Line.h  Merge.cpp  Merge.h  Node.cpp  Node.h  NodeConnection.h  NodeScene.h  NodesInfo.cpp  NodesInfo.h  Null.cpp  Null.h  PointGenerate.cpp  PointGenerate.h  QuadSphere.cpp  QuadSphere.h  Scene.cpp  Scene.h  SmoothNormals.cpp  SmoothNormals.h  (+12 more)
src/Engine/Core/Nodes/Fields/: BooleanField.cpp  BooleanField.h  ComboField.cpp  ComboField.h  Field.h  FileField.cpp  FileField.h  Float3Field.cpp  Float3Field.h  FloatField.cpp  FloatField.h  IntField.cpp  IntField.h
src/Engine/Core/Nodes/tests/: Benchmarks.cpp  Benchmarks.h
src/Engine/Core/Rendering/: EuclideCamera.cpp  EuclideCamera.h  EuclideModel.cpp  EuclideModel.h  EuclideRenderer.cpp  EuclideRenderer.h
src/Engine/Core/Rendering/shaders/: fragShader.frag  pointsVertShader.vert  wireframeVertShader.vert
src/Engine/Nodes/: Cube.h  Node.h
src/Engine/UI/: EuclideEngine.cpp  EuclideEngine.h  EuclideInterface.cpp  EuclideInterface.h  EuclideWindow.cpp
src/Engine/UI/NodeGraph/: CuttingLine.cpp  CuttingLine.h  NodeConnection.h  NodeConnectionLine.cpp  NodeConnectionLine.h  NodeItem.cpp  NodeItem.h  SceneGraph.cpp  SceneGraph.h
src/Engine/shaders/: fragShader.frag  pointsFragShader.frag  pointsVertShader.vert  vertShader.vert  wireframeFragShader.frag
